--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>DIEGO BARCELAR</title>
+    <title>Diego Barcelar</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -43,7 +43,7 @@
 
       <footer class="site-footer">
 
-        <span class="site-footer-credits">2016 © Diego Barcelar</span>
+        <span class="site-footer-credits">COPYRIGHT © 2016. ALL RIGHTS RESERVED.</span>
       </footer>
 
     </section>
