--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Hi, I am Diego Barcelar</h1>
-      <h2 class="project-tagline">Software Engineer &amp; Web Developer</h2>
+      <h2 class="project-tagline">Computer Engineering student &amp; Web Developer</h2>
     </section>
 
     <section class="main-content">
