--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Hi, I am Diego Barcelar :)</h1>
+      <h1 class="project-name">Hi, I am Diego Barcelar</h1>
       <h2 class="project-tagline">Computer Engineering student &amp; Web Developer</h2>
     </section>
 
