--- a/index.html
+++ b/index.html
@@ -1,54 +1,31 @@
-<!DOCTYPE html>
-<html lang="en-us">
-  <head>
-    <meta charset="UTF-8">
-    <title>Diego Barcelar</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
-    <meta name="p:domain_verify" content="dbe05889ecc1e53fd546aa8911ac03dd"/>
-  </head>
-  <body>
-    <section class="page-header">
-      <h1 class="project-name">Hi, I am Diego Barcelar</h1>
-      <h2 class="project-tagline">Computer Engineering student &amp; Web Developer</h2>
-    </section>
+<!doctype html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <link rel="stylesheet" href="stylesheet.css">
+        <link href="https://fonts.googleapis.com/css?family=Raleway|Roboto+Slab:300" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <section class="main-content">
-      <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+        <title>Diego Barcelar | Portfolio</title>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+    </head>
+    <body>
+    <div class="container">
+        <p class="hi">Hi! I'm <b>Diego Barcelar.</b></p>
+        <p class="description">I'm a Computer Engineering student @<a href="https://www.upe.br" target="_blank"><b>UPE</b></a>.<br><br>I'm Brazilian and I live in Recife. I’m passionated about<br> 
+            <b>Design</b>, <b>Business</b>, <b>Code</b> and everything that relates<br>to any of these subjects.</p>
+        <p class="find">Where can you find <b>@diegobarcelar</b>?</p>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
+        <div align="center">
+            <a href="https://www.linkedin.com/in/diegobarcelar" target="_blank" class="fa fa-linkedin"></a>
+            <a href="https://dribbble.com/diegobarcelar" target="_blank" class="fa fa-dribbble"></a>
+            <a href="https://www.behance.net/diegobarcelar" target="_blank" class="fa fa-behance"></a>
+            <a href="https://github.com/diegobarcelar" target="_blank" class="fa fa-github"></a>
+            <a href="https://medium.com/@diegobarcelar" target="_blank" class="fa fa-medium"></a>
+            <a href="https://twitter.com/diegobarcelar" target="_blank" class="fa fa-twitter"></a>
+        </div>
+    </div>
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
 
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://help.github.com/articles/basic-writing-and-formatting-syntax/#mentioning-users-and-teams" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
-
-      <footer class="site-footer">
-
-        <span class="site-footer-credits">COPYRIGHT © 2016. ALL RIGHTS RESERVED.</span>
-      </footer>
-
-    </section>
-
-  
-  </body>
-</html>
+    </body>
+</html> 
