--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body>
     <div class="container">
         <p class="hi">Hi! I'm <b>Diego Barcelar.</b></p>
-        <p class="description">I'm a Product Design student @<a href="https://www.ufpe.br" target="_blank"><b>UFPE</b></a>.<br><br>I'm Brazilian and I live in Recife. I’m passionated about<br> 
+        <p class="description">I'm a <b>Product Design</b> student @<a href="https://www.ufpe.br" target="_blank"><b>UFPE</b></a>.<br><br>I'm Brazilian and I live in Recife. I’m passionated about<br> 
             <b>Design</b>, <b>Business</b>, <b>Code</b> and everything that relates<br>to any of these subjects.</p>
         <p class="find">Where can you find <b>@diegobarcelar</b>?</p>
 
