--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 
     <!-- metadados basicos da pagina -->
     <meta charset="utf-8">
-    <title>Diego Barcelar | UX/UI Designer and Front-End Developer </title>
+    <title>Diego Barcelar | UX/UI Design</title>
     <meta name="og:title" content="Diego Barcelar">
-    <meta name="og:description" content="I'm Diego Barcelar, brazilian Product Designer & Developer">
-    <meta name="description" content="I'm Diego Barcelar, brazilian Product Designer & Developer">
+    <meta name="og:description" content="I'm Diego Barcelar, brazilian UX Designer & Developer">
+    <meta name="description" content="I'm Diego Barcelar, brazilian UX Designer & Developer">
     <meta name="author" content="Diego Barcelar">
 
     <!-- metadados especificos da versao mobile -->
@@ -85,8 +85,8 @@
                                         class="underline-effect"> drop me a line</a> or check my <a
                                         href="https://www.linkedin.com/in/diegobarcelar/" target="_blank"
                                         class="underline-effect">LinkedIn</a> and <a
-                                        href="https://dribbble.com/diegobarcelar" target="_blank"
-                                        class="underline-effect">Dribbble</a>.</li>
+                                        href="https://behance.net/diegobarcelar" target="_blank"
+                                        class="underline-effect">Behance</a>.</li>
                             </ul>
                         </div>
                     </div>
