--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         <div class="home-bottom-text">
                             <h4 class="animate-intro">
                                 Interested in <span class="white-text">design</span>, <span
-                                    class="white-text">business</span>, <span class="white-text"></span>code</span> and
+                                    class="white-text">business</span>, <span class="white-text">code</span> and
                                 everything that relates to any of these subjects.
                             </h4>
 
