--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
     <!-- metadados basicos da pagina -->
     <meta charset="utf-8">
-    <title>Diego Barcelar | UX/UI Design</title>
+    <title>Diego Barcelar | UX/UI Designer</title>
     <meta name="og:title" content="Diego Barcelar">
     <meta name="og:description" content="I'm Diego Barcelar, brazilian UX Designer & Developer">
     <meta name="description" content="I'm Diego Barcelar, brazilian UX Designer & Developer">
